增加消息模板，Redis
